Fixing overflow-x hidden from body

--- a/src/app/(frontend)/globals.scss
+++ b/src/app/(frontend)/globals.scss
@@ -141,7 +141,7 @@ body {
   background-color: $white !important;
   color: $black;
   text-transform: uppercase;
-  overflow-x: hidden;
+
 }
 
 /* ---------------------------------
